--- a/src/app/ng-content/ng-content.component.html
+++ b/src/app/ng-content/ng-content.component.html
@@ -1,5 +1,5 @@
+<ng-content select="h1"></ng-content>
+<P>Using Content projection you can project or insert the content you want to
+  use inside another component</P>
 
-
-    <ng-content select="h1"></ng-content>
-    <ng-content select="button"></ng-content>
-    <ng-content select="P"></ng-content>
+<ng-content select="button"></ng-content>
