Reactive forms done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,32 @@
 
-  <app-ng-content>
-    <h1>CONTENT PROJECTION</h1>
-    <button>click here</button>
-  </app-ng-content>
-
+<h1>LOGIN CREDENTIALS</h1>
+<form [formGroup]="login" class="login-details" (ngSubmit)="controlSubmit()">
+  <div>
+    <input formControlName="fname" name="fname" placeholder="Enter First Name" type="text">
+  </div>
+  <div>
+    <input formControlName="lname" name="lname"  placeholder="Enter Last Name" type="text">
+  </div>
+  <div>
+    <input  formControlName="email" name="email"  placeholder="Enter Email" type="email">
+  </div>
+  <div>
+    <input formControlName="password"  name="password"  placeholder="Password" type="password">
+  </div>
+  <div>
+    <input formControlName="dob" name="dob"  placeholder="Enterdob" type="date">
+  </div>
+  <div>
+    <input formControlName="phno" name="phno"  placeholder="phone number" type="number">
+  </div>
+  <div class="add-address" *ngFor="let x of getAddressFromArray().controls;index as i">
+    <input [formControlName]="i" name="address"  placeholder="Enter your address" type="text">
+    <div class="add-remove-btn">
+    <button class="add-btn" type="button"(click)=" controltoAddress()">Add</button>
+    <button class="remove-btn" type="button"(click)=" removeAdress(i)">Remove</button>
+    </div>
+  </div>
+  <div>
+    <button class="submit-btn">Submit</button>
+  </div>
+  </form>
