--- a/src/app/ng-content/ng-content.component.html
+++ b/src/app/ng-content/ng-content.component.html
@@ -1,5 +1,20 @@
-<ng-content select="h1"></ng-content>
-<P>Using Content projection you can project or insert the content you want to
-  use inside another component</P>
-
-<ng-content select="button"></ng-content>
+<form>
+  <div>
+    <input name="fname" placeholder="Enter First Name" type="text">
+  </div>
+  <div>
+    <input name="lname"  placeholder="Enter Last Name" type="text">
+  </div>
+  <div>
+    <input name="email"  placeholder="Enter Email" type="email">
+  </div>
+  <div>
+    <input name="password"  placeholder="Password" type="password">
+  </div>
+  <div>
+    <input name="dob"  placeholder="Enterdob" type="date">
+  </div>
+  <div>
+    <button>Submit</button>
+  </div>
+  </form>
