--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,73 +1,78 @@
-*
-{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    
+
 }
 
-h1{
+h1 {
     text-align: center;
-    color:rgb(113, 33, 243);
+    color: rgb(113, 33, 243);
 }
-form{
+
+form {
     background-color: cadetblue;
-    display:block;
-    width:40%;
-    margin-left:25rem;
-    margin-top:2rem;
+    display: block;
+    width: 40%;
+    margin-left: 25rem;
+    margin-top: 2rem;
     text-align: center;
     border-radius: 5px;
 
 }
-form input{
-    width:85%;
-    padding:10px;
-    margin:10px;
+
+form input {
+    width: 85%;
+    padding: 10px;
+    margin: 10px;
     border-radius: 5px;
-    border:2px solid rgb(3, 39, 59);
-    margin-top:1rem;
-   
-    
+    border: 2px solid rgb(3, 39, 59);
+    margin-top: 1rem;
+
+
 }
-.submit-btn{
-    width:20%;
-    padding:5px;
-    margin-top:2rem;
-    margin-bottom:1rem;
+
+.submit-btn {
+    width: 20%;
+    padding: 5px;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
     border-radius: 5px;
-    border:2px solid rgb(3, 39, 59);
+    border: 2px solid rgb(3, 39, 59);
 }
-.add-remove-btn
-{
-    display:flex;
+
+.add-remove-btn {
+    display: flex;
     justify-content: center;
-    
+
 }
 
 .add-btn {
-    width:60px;
-    height:40px;
-    margin-top:10px;
-    margin-left:-10px;
-    transition:2s;
+    width: 60px;
+    height: 40px;
+    margin-top: 10px;
+    margin-left: -10px;
+    transition: 2s;
     border-radius: 5px;
-    border:2px solid rgb(3, 39, 59);
+    border: 2px solid rgb(3, 39, 59);
 }
-.add-btn:hover{
+
+.add-btn:hover {
     background-color: darkcyan;
-    border:none;
+    border: none;
 
 }
-.remove-btn{
-    width:60px;
-    height:40px;
-    margin-top:10px;
-    transition:2s;
+
+.remove-btn {
+    width: 60px;
+    height: 40px;
+    margin-top: 10px;
+    transition: 2s;
     border-radius: 5px;
-    border:2px solid rgb(3, 39, 59);
+    border: 2px solid rgb(3, 39, 59);
 }
-.remove-btn:hover{
+
+.remove-btn:hover {
     background-color: darkcyan;
-    border:none;
+    border: none;
 }
